Enhance layout by adding overflow handling for responsive design in adminMbl.html and faculty.html

--- a/Adminstration/adminMbl.html
+++ b/Adminstration/adminMbl.html
@@ -12,14 +12,19 @@
     body {
         font-family: 'inter', sans-serif;
         /* margin: 20px; */
-        
+        overflow-x: hidden;
     }
 
     .container {
         max-width: 1000px;
         margin: 0 auto;
+        overflow-x: hidden;
     }
-
+    .table-wrapper {
+    overflow-x: auto; /* Enables horizontal scrolling for the table */
+    margin: 0 auto;
+    width: 100%;
+}
     .controls {
         margin-bottom: 10px;
     }
@@ -43,6 +48,7 @@
     table {
         width: 100%;
         border-collapse: collapse;
+        overflow: hidden; 
     }
 
     thead th {
@@ -240,7 +246,7 @@
                 <option value="all">All items</option>
             </select>
         </div>
-
+        <div class="table-wrapper">
         <table>
             <thead>
                 <tr>
@@ -256,7 +262,7 @@
                 <!-- Data rows will be dynamically inserted here -->
             </tbody>
         </table>
-
+    </div>
         <div class="pagination">
             <button id="prev-page" class="page-btn">Previous</button>
             <span id="page-numbers"></span>
