--- a/faculty/faculty.html
+++ b/faculty/faculty.html
@@ -6,9 +6,13 @@
     <title>Faculty</title>
     <script src="../templates/includeHTML.js" defer></script>
     <style>
+        header,footer{
+            overflow-x: hidden;
+        }
          body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    
 }
 
 header {
@@ -48,6 +52,7 @@ header {
 table {
     width: 100%;
     border-collapse: collapse;
+    /* overflow-x: scroll; */
 }
 
 thead th {
