Update program category color for better visibility in faculty directory

--- a/faculty/facultyDirectory.html
+++ b/faculty/facultyDirectory.html
@@ -193,7 +193,7 @@
                     <div class="program-category">
                         Undergraduate
                         <div class="program-dropdown">
-                            <div class="program-category">Department of Sciences
+                            <div class="program-category" style="color:#22316C">Department of Sciences
                                 <div class="program-dropdown">
                                     <a href="./faculty.html?branch=Department_of_English"><div class="program-item">DEPARTMENT OF ENGLISH</div></a>
                                     <a href="./faculty.html?branch=Department_of_Telugu/Hindi/Sanskrit"><div class="program-item">DEPARTMENT OF TELUGU/HINDI/SANSKRIT</div></a>
