--- a/admissions/admissions.html
+++ b/admissions/admissions.html
@@ -4,163 +4,421 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admissions</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <script src="../templates/includeHTML.js" defer></script>
-    <script src="https://unpkg.com/htmx.org@1.8.5"></script>
-    <script src="adata.js" defer></script>
     <style>
         * {
             margin: 0;
-            border: 0;
-            box-sizing: border-box;
+            font-family: "Inter", sans-serif;
         }
-        body {
-            font-family: 'Inter', sans-serif;
-            padding: 20px;
-            margin: 0;
+        header {
+            background-image: url("/assects/home.png");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-clip: content-box;
+            position: relative;
         }
         .container {
-            text-align: center;
-            margin: 0 auto;
-            width: 90%;
-            padding: 40px;
-            justify-content: center;
-            margin-bottom: 100px;
-        }
-        .container h1 {
-            color: #22316D;
-            padding: 40px;
-            font-size: 2.5em;
-        }
-        .box {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 90px;
-        }
-        .box a {
-            text-decoration: none;
-        }
-        .box button {
-            width: 220px; /* Reduced width */
-            height: 60px; /* Reduced height */
-            background: transparent;
-            border: 1px solid #000;
-            border-radius: 10px;
-            font-weight: bolder;
-            font-size: 1.2em;
-            padding: 20px;
-            cursor: pointer;
-            box-shadow: 2px 2px 10px rgba(34, 49, 109, 0.5); /* Increased blue shadow */
+            width: 100%;
             position: relative;
-            overflow: hidden;
-            transition: color 0.3s ease; /* Transition for color change */
+            /* padding-bottom: 1%; Enough space for the button at the bottom */
         }
-        .box button::before {
+        .container > .head {
+            text-align: center;
+            padding: 1.3vw; /* 40px */
+            color: #22316C;
+            font-size: 6vw;
+        }
+        .content {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 5%;
+        }
+        .content button {
+            padding: 15px 25px;
+            border: unset;
+            border-radius: 15px;
+            color: #212121;
+            z-index: 1;
+            background: #e8e8e8;
+            position: relative;
+            font-weight: 700;
+            font-size: 1.3vw;
+            box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+            transition: all 250ms;
+            overflow: hidden;
+        }
+        .content button::before {
             content: "";
             position: absolute;
             top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background-color: #22316da9;
-            transition: left 0.3s ease;
-            z-index: 0;
-        }
-        .box button:hover::before {
             left: 0;
+            height: 100%;
+            width: 0;
+            border-radius: 15px;
+            background-color: #22316C;
+            z-index: -1;
+            box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+            transition: all 250ms;
         }
-        .box button:hover {
-            color: #fff;
+        .content button:hover {
+            color: #e8e8e8;
         }
-        .box button span {
-            position: relative;
-            z-index: 1;
+        .content button:hover::before {
+            width: 100%;
         }
-        .box button.clicked {
-            pointer-events: none;
-            color: #fff; /* Change text color to white */
+        .box {
+            margin-top: 2.5vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        .box button.clicked::before {
-            left: 0 !important;
+        .heading {
+            background: #22316DBF;
+            color: white;
+            text-align: center;
+            border-radius: 15px;
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
         }
+        .heading h6 {
+            font-size: 2vw;
+            justify-content: center;
+            margin-top: 0.01vw;
+            padding: 2%;
+        }
+        .files {
+            width: 100%;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .file {
+            width: 100%;
+            background-color: rgba(34, 49, 104, 0.25);
+            border: 0.17vw solid transparent;
+            border-radius: 10px;
+            margin-bottom: 0.83vw;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .file:hover, .file.active {
+            background-color: rgba(34, 49, 104, 0.55);
+            color: #ffffff;
+            transform: translateY(-1px);
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
+        }
+        .file h6:hover, .file.active h6 {
+            color: white;
+        }
+        .file h6 {
+            display: flex;
+            justify-content: center;
+            margin-top: 1.67vw;
+        }
+        a {
+            text-decoration: none;
+            color: black;
+        }
+        .c1.active {
+            background-color: #22316c;
+            color: white;
+        }
+        .sub1 {
+            margin-top: 5.83vw;
+        }
+        .hidden {
+            display: none;
+        }
+        .visible {
+            padding: 4vw;
+            display: block;
+        }
+        .file {
+            width: 97%;
+            display: flex;
+            justify-content: space-between;
+            align-content: space-between;
+            padding: 1.3%;
+        }
+        .file button {
+            color: #22316C;
+            font-size: medium;
+            padding: 0;
+            margin: 0;
+            border: none;
+            background: none;
+            cursor: pointer;
+        }
+        .file:hover button {
+            font-size: large;
+            color: #e78709;
+            text-decoration: underline;
+            text-underline-offset: calc(4px);
+        }
+        .scroll-to-top {
+            position: fixed;
+            right: 20px;
+            background-color: #22316C;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            opacity: 0;
+            transition: opacity 0.3s, bottom 0.3s ease; /* Smooth transition for both opacity and bottom */
+            z-index: 1000; /* Ensure it appears above other content */
+        }
+        .scroll-to-top.show {
+            opacity: 1;
+            box-shadow: 0 0 20px white;
+        }
+        .scroll-to-top:hover {
+            background-color: #e78709;
+        }
+        table {
+                width: 100%;
+                border-collapse: collapse; /* Removes gaps between cells */
+                margin: 2vw auto; /* Centers the table and adds some space around it */
+                font-size: 1.2vw; /* Adjust font size according to your design */
+                max-width: 1200px; /* Ensures the table doesn't exceed this width */
+                background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+                border-radius: 15px;
+                overflow: hidden; /* Ensures border-radius works even if the content overflows */
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
+            }
+
+            thead {
+                background-color: #22316c; /* Background color for the header */
+                color: white; /* White text color for contrast */
+            }
+
+            thead th {
+                padding: 1vw; /* Adds padding to the header cells */
+                font-weight: bold; /* Makes the text bold */
+                text-align: left; /* Aligns text to the left */
+                font-size: 1.5vw;
+            }
+
+            tbody tr {
+                border-bottom: 1px solid #ddd; /* Adds a border between rows */
+            }
+
+            tbody tr:last-child {
+                border-bottom: none; /* Removes border from the last row */
+            }
+
+            tbody td {
+                padding: 1vw; /* Adds padding to the body cells */
+                text-align: left; /* Aligns text to the left */
+            }
+
+            tbody tr:hover {
+                background-color: rgba(34, 49, 104, 0.1); /* Adds a hover effect */
+            }
+
+            @media (max-width: 768px) {
+                table {
+                    font-size: 3vw; /* Increases font size on smaller screens */
+                    margin: 2vw auto;
+                }
+
+                thead th, tbody td {
+                    padding: 2vw; /* Increases padding on smaller screens */
+                }
+            }
+
         @media (max-width: 768px) {
-            h1 {
-                font-size: 2em;
+            .content button {
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 1.6vw;}
+            .heading {
+                border-radius: 5px;
             }
-            .box button {
-                font-size: 1em;
-                height: 90px;
-                width: 250px;
+            .file p{
+                font-size: 3vw;
             }
-        }
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5em;
+            .file{
+                border-radius: 6px;
             }
-            .box button {
-                font-size: 0.8em;
-                height: 80px;
-                width: 200px;
+            .file button{
+                font-size: 3vw;
+                display: flex;
+                white-space: nowrap;
+            }
+            .scroll-to-top.show{
+                display: none;
             }
         }
         footer {
-            text-align: center;
-            background-color: #f1f1f1;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        .form-container {
-            display: none; /* Hidden by default */
-            margin-top: 20px;
-            width: 100%;
-            font-size: 20px;
-        }
-        .form-container table {
-            width: 100%;
-            border-collapse: collapse;
-            justify-content: center;
-            border-radius: 60px; /* Added border radius */
-            overflow:initial;/* Ensures rounded borders are applied */
-            border: 1px solid #000;
-            
-        }
-        .form-container table, .form-container th, .form-container td {
-            border: 1px solid #000;
-            font-weight: bold;
-        }
-        .form-container th, .form-container td {
-            padding: 10px;
-            text-align: center;
-        }
-        .form-container th {
-            background-color: #22316da9;
-            color: #fff;
-            text-align: center;
-        }
-        .form-container label {
-            display: block;
-            margin: 10px 0 5px;
+            height: 200px; /* Adjust according to your footer height */
+            position: relative; /* Ensure footer has a relative position */
         }
     </style>
 </head>
 <body>
     <header id="nav-placeholder"></header>
+   
     <div class="container">
-        <h1>ADMISSIONS</h1>
-        <div class="box">
-            <button onclick="showForm('undergraduate', this)"><span>UNDERGRADUATE</span></button>
-            <button onclick="showForm('engineering', this)"><span>UG-ENGINEERING</span></button>
-            <button onclick="showForm('postgraduate', this)"><span>POST GRADUATE</span></button>
+        <div class="head">
+            <h6>Admissions</h6>
         </div>
-        <!-- Form containers -->
-        <div id="undergraduate-form" class="form-container"></div>
-        <div id="engineering-form" class="form-container"></div>
-        <div id="postgraduate-form" class="form-container"></div>
+        <div class="content">
+            <a href="javascript:void(0)"><button class="c1" id="button1">Undergraduate Programmes</button></a>
+            <a href="javascript:void(0)"><button class="c1" id="button2">Postgraduate Programmes</button></a>
+            <a href="javascript:void(0)"><button class="c1" id="button3">Engineering Programmes</button></a>
+        </div>
+
     </div>
+
+    <div id="sub1" class="hidden"></div>
+    <div id="sub2" class="hidden"></div>
+    <div id="sub3" class="hidden"></div>
+    <button id="scrollToTop" class="scroll-to-top">
+        &#8593; <!-- Unicode character for up arrow -->
+    </button>
     <footer id="footer-placeholder"></footer>
+    <script type="module">
+        import admissionData from '../data/Admission/admissionData.js';
+
+        console.log(admissionData);
+        function renderSection(sectionId, programmes) {
+            const container = document.getElementById(sectionId);
+            container.innerHTML = `
+            <div class="head">
+                <div class="heading">
+                    <h6>${sectionId === 'sub1' ? 'Undergraduate Programmes' : sectionId === 'sub2' ? 'Postgraduate Programmes' : 'Engineering Programmes'}</h6>
+                </div>
+            </div>
+            <div class="box">
+                <div class="files">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>S.No</th>
+                                <th>Programme Name</th>
+                                <th>Intake</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            ${programmes.map(programme => `
+                                <tr>
+                                    <td>${programme.sNo}</td>
+                                    <td>${programme.name}</td>
+                                    <td>${programme.intake}</td>
+                                </tr>
+                            `).join('')}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        `;
+        }
+
+        function toggleVisibility(buttonId, sectionId) {
+            const sections = ['sub1', 'sub2', 'sub3'];
+            const buttons = ['button1', 'button2', 'button3'];
+
+            sections.forEach(id => {
+                const section = document.getElementById(id);
+                if (id === sectionId) {
+                    section.classList.add('visible');
+                    section.classList.remove('hidden');
+                } else {
+                    section.classList.remove('visible');
+                    section.classList.add('hidden');
+                }
+            });
+
+            buttons.forEach(id => {
+                const button = document.getElementById(id);
+                if (id === buttonId) {
+                    button.classList.add('active');
+                } else {
+                    button.classList.remove('active');
+                }
+            });
+        }
+
+        document.getElementById('button1').addEventListener('click', () => toggleVisibility('button1', 'sub1'));
+        document.getElementById('button2').addEventListener('click', () => toggleVisibility('button2', 'sub2'));
+        document.getElementById('button3').addEventListener('click', () => toggleVisibility('button3', 'sub3'));
+
+        function getQueryParam(param) {
+            const urlParams = new URLSearchParams(window.location.search);
+            return urlParams.get(param);
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            renderSection('sub1', admissionData.UGProgrammes);
+            renderSection('sub2', admissionData.PGProgrammes);
+            renderSection('sub3', admissionData.EngineeringProgrammes);
+            const admissionParam = getQueryParam('admission');
+            if (admissionParam) {
+                const buttonId = `button${admissionParam.slice(-1)}`;
+                toggleVisibility(buttonId, admissionParam);
+            } else {
+                toggleVisibility('button1', 'sub1');
+            }
+        });
+        // Button for scrolling to the top
+
+        const scrollToTopButton = document.getElementById('scrollToTop');
+        const footer = document.querySelector('footer');
+
+        // Function to handle scroll events
+        function handleScroll() {
+            // Show or hide the button based on scroll position
+            if (window.scrollY > 100) {
+                scrollToTopButton.classList.add('show');
+            } else {
+                scrollToTopButton.classList.remove('show');
+            }
+            updateScrollToTopButtonPosition();
+        }
+
+        // Function to update the button's position
+        function updateScrollToTopButtonPosition() {
+            const footerRect = footer.getBoundingClientRect();
+            const buttonRect = scrollToTopButton.getBoundingClientRect();
+
+            // Calculate the space between the button and the footer
+            const footerTop = footerRect.top;
+            const buttonHeight = buttonRect.height;
+            const viewportHeight = window.innerHeight;
+            const footerBuffer = 10; // Buffer to keep the button above the footer
+
+            if (footerTop < viewportHeight) {
+                // Adjust button position to stay above the footer
+                const bottomOffset = Math.average(footerTop - buttonHeight - footerBuffer, 20);
+                scrollToTopButton.style.bottom = `${bottomOffset}px`;
+            } else {
+                // Fixed position if not near footer
+                scrollToTopButton.style.bottom = '20px';
+            }
+        }
+
+        // Function to handle scroll-to-top button click
+        scrollToTopButton.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
+        // Add event listeners for scroll and resize events
+        window.addEventListener('scroll', handleScroll);
+        window.addEventListener('resize', updateScrollToTopButtonPosition);
+
+        // Initial position update
+        updateScrollToTopButtonPosition();
+    </script>
+ 
 </body>
 </html>
