Update program offerings terminology and fix tag formatting in programs.html

--- a/Academics/programs.html
+++ b/Academics/programs.html
@@ -238,7 +238,7 @@ body {
             <div class="details">
                 <h1>Engineering And Technology</h1>
                 <h2>B-Tech 5 Dept • M-Tech 2 Dept</h2>
-                <h3>Departments: </h3>
+                <h3>Offering: </h3>
                 <h6 style="margin: 4px 0 4px 0">B tech:</h6>
                 <div class="tags">
                     <span class="tag" >CIVIL</span>
@@ -268,7 +268,7 @@ body {
             <div class="details">
                 <h1>Undergraduate Program</h1>
                 <h2>science 7 Dept • Commerce 4 Dept <br>Arts 2 Dept • Managment 4 Dept </h2>
-                <h3>Departments: </h3><br>
+                <h3>Offering: </h3><br>
                 <div class="tags">
                     <span class="tag" >Science</span>
                     <span class="tag">Commerce</span>
@@ -290,12 +290,12 @@ body {
             <div class="details">
                 <h1>Postgraduate Program</h1>
                 <h2>PG 7 Dept</h2>
-                <h3>Departments: </h3>
+                <h3>Offering: </h3>
                 <h6 style="margin: 4px 0 4px 0">B tech:</h6>
                 <div class="tags">
                     <span class="tag" >MBA</span>
                     <span class="tag">MCA</span>
-                    <span class="tag">Organic Chemistry</span>
+                    <span class="tag">Organic_Chemistry</span>
                     <span class="tag">MHRM</span>
                     
                 </div>
