Update header background position to bottom across multiple HTML files and create new Academics directory page

--- a/Academics/programs.html
+++ b/Academics/programs.html
@@ -14,6 +14,14 @@
     box-sizing: border-box;
     font-family: Inter, sans-serif;
 }
+header {
+            background-image: url("../assects/home.webp");
+            background-repeat: no-repeat;
+            background-position: bottom;
+            background-clip: content-box;
+            background-size: cover;
+            position: relative;
+        }
 
 body {
     /* display: flex; */
@@ -231,7 +239,8 @@ body {
     </style>
 </head>
 <div>
-    <div id="nav-placeholder"></div>
+    <header id="nav-placeholder"></header>
+    <h1 style="text-align: center; margin-top: 20px; color:#22316c">Programs</h1>
     <div class="wrapper">
         <div class="card">
             <div class="poster"><img src="../assects/engeneering.png" alt="Location Unknown"></div>
@@ -239,7 +248,6 @@ body {
                 <h1>Engineering And Technology</h1>
                 <h2>B-Tech 5 Dept • M-Tech 2 Dept</h2>
                 <h3>Offering: </h3>
-                <h6 style="margin: 4px 0 4px 0">B tech:</h6>
                 <div class="tags">
                     <span class="tag" >CIVIL</span>
                     <span class="tag">CSE</span>
