--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
               header {
         background-image: url("./assects/home.png");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: bottom;
         background-clip: content-box;
         background-size: cover;
         position: relative;
