--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         width: 100%;
         background-image: url("/assects/home.webp");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: bottom;
         background-clip: content-box;
         position: relative;
         background-size: cover;
