--- a/top/iqac.html
+++ b/top/iqac.html
@@ -14,7 +14,7 @@
             width: 100%;
             background-image: url("/assects/home.png");
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: bottom;
             background-size: cover;
             position: relative;
         }
