--- a/gvp.html
+++ b/gvp.html
@@ -14,7 +14,7 @@
          header {
             background-image: url("./assects/home.png");
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: bottom;
             background-clip: content-box;
             background-size: cover;
             position: relative;
