--- a/top/online payment.html
+++ b/top/online payment.html
@@ -13,7 +13,7 @@
         header {
             background-image: url("/assects/home.png");
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: bottom;
             background-clip: content-box;
             position: relative;
         }
