Update syllabus.html to enhance background styling and change header title

--- a/Academics/syllabus.html
+++ b/Academics/syllabus.html
@@ -17,6 +17,7 @@
             background-position: bottom;
             background-clip: content-box;
             position: relative;
+            background-size: cover;
         }
         .container {
             width: 100%;
@@ -216,7 +217,7 @@
     <header id="nav-placeholder"></header>
     <div class="container">
         <div class="head">
-            <h6>AICTE MANDATORY INFORMATION</h6>
+            <h6>syllabus</h6>
         </div>
         <div class="content">
             <a href="javascript:void(0)"><button class="c1" id="button1">Engineering</button></a>
