Add video background and refactor postgraduate program section for improved layout and responsiveness

--- a/Academics/engeenering.html
+++ b/Academics/engeenering.html
@@ -13,9 +13,9 @@
         }
         header {
             width: 100%;
-            background: url("");
+            background: url("../assects/Videos/eng.webp");
             background-repeat: no-repeat;
-            background-position: bottom;
+            background-position: center;
             background-clip: content-box;
             position: relative;
             background-size: cover;
