Add new activities and placements data for civil, mechanical, and ECE departments; update engineering HTML and syllabus links

--- a/Academics/syllabus.html
+++ b/Academics/syllabus.html
@@ -249,7 +249,7 @@
                         ${data.files.map(file => `
                             <div class="file">
                                 <p>${file.text}</p>
-                                <a href="${file.link}" target="_blank"><button>Click me</button></a>
+                                <a href="${file.link}" target="_self"><button>Click me</button></a>
                             </div>
                         `).join('')}
                     </div>
