--- a/department/mech.html
+++ b/department/mech.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <!-- <section id="preloader-placeholder" ></section> -->
+    <section id="preloader-placeholder" ></section>
     <style>
         * {
         margin: 0;
